NATTQA-ENV/force-app/main/default/objects/NPS_approval_mapping__mdt/NPS_approval_mapping__mdt.object-meta.xml
<CustomObject>
    <label>NPS approval mapping</label>
    <pluralLabel>NPS approval mappings</pluralLabel>
</CustomObject>