NATTQA-ENV/force-app/main/default/objects/NPS_approval_mapping__mdt/fields/Approver_level__c.field-meta.xml
<CustomField>
    <fullName>Approver_level__c</fullName>
    <label>Approver level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>L0</fullName>
                <default>true</default>
                <label>L0</label>
            </value>
            <value>
                <fullName>L1</fullName>
            </value>
            <value>
                <fullName>L2</fullName>
            </value>
            <value>
                <fullName>L3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>