NATTQA-ENV/force-app/main/default/objects/NPS_approval_mapping__mdt/fields/Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Type__c</fullName>
    <label>Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parts</fullName>
                <default>true</default>
                <label>Parts</label>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Principal/GM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>