NATTQA-ENV/force-app/main/default/objects/NPS_approval_mapping__mdt/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <length>80</length>
    <type>Text</type>
</CustomField>